# Localization

./: .gitignore  CMakeLists.txt  Doxyfile  Localization.sln  Localization.vcxproj  Localization.vcxproj.filters  LocalizationMacros.props  README.md  localization_modules.json
.github/workflows/: ci.yml
Tests/: CMakeLists.txt  main.cpp  tests.py
assets/: LocalizationUtils  localization_utils_settings.json
assets/Linux/: LocalizationUtils
assets/LinuxARM/: LocalizationUtils
assets/localization/: localization_meta.json
dependencies/JSON/include/: CodePageConstants.h  JSONArrayWrapper.h  JSONBuilder.h  JSONParser.h  JSONUtility.h  OutputOperations.h  RecursiveJSONIterator.h
dependencies/JSON/include/Exceptions/: BaseJSONException.h  CantFindValueException.h  WrongEncodingException.h  WrongInputStreamException.h
dependencies/JSON/lib/Windows/Debug-x64/: JSON.idb
dependencies/JSON/libs/Debug-x64/: JSON.idb
docs/: _base_text_localization_8h_source.html  _localization_constants_8h_source.html  _multi_localization_manager_8cpp_source.html  _multi_localization_manager_8h_source.html  _string_view_utils_8cpp_source.html  _string_view_utils_8h_source.html  _text_localization_8cpp_source.html  _text_localization_8h.html  _text_localization_8h.js  _text_localization_8h_source.html  _w_text_localization_8cpp_source.html  _w_text_localization_8h.html  _w_text_localization_8h.js  _w_text_localization_8h_source.html  annotated.html  annotated_dup.js  classes.html  classlocalization_1_1_base_text_localization-members.html  classlocalization_1_1_base_text_localization.html  classlocalization_1_1_base_text_localization.js  classlocalization_1_1_base_text_localization_3_01wchar__t_01_4-members.html  classlocalization_1_1_base_text_localization_3_01wchar__t_01_4.html  classlocalization_1_1_base_text_localization_3_01wchar__t_01_4.js  classlocalization_1_1_multi_localization_manager-members.html  classlocalization_1_1_multi_localization_manager.html  classlocalization_1_1_multi_localization_manager.js  classlocalization_1_1_text_localization-members.html  classlocalization_1_1_text_localization.html  classlocalization_1_1_text_localization.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  structlocalization_1_1_multi_localization_manager_1_1_localization_holder-members.html  structlocalization_1_1_multi_localization_manager_1_1_localization_holder.html  (+5 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  typedefs_1.js
include/: BaseTextLocalization.h  MultiLocalizationManager.h  StringViewUtils.h  WTextLocalization.h
src/: BaseTextLocalization.h  LocalizationConstants.h  MultiLocalizationManager.cpp  MultiLocalizationManager.h  StringViewUtils.cpp  StringViewUtils.h  TextLocalization.cpp  TextLocalization.h  WTextLocalization.cpp  WTextLocalization.h
